project/test/syntax/bad/Bad08.ty
singleton class Worker { 
    
    actions: {
        doIfBig: (x: Int) -> Int = {
            if (x > 3) {
                this#dosomething
            } else Pass
        }
    }
}
